# rust-xp-ollama

./: Cargo.toml
.c02-data/: ctx.json
examples/: c01-simple.rs  c02-context.rs  c03-chat.rs
src/: lib.rs
